@@ -1,6 +1,9 @@
 Next (not yet released)
 
-* Rhino and Node CLIs both exit with code 1 when there are errors
+* Rhino and Node CLIs both exit with code 1 when there are errors (pull #72)
+* Changed description of adjoining classes to be unsupported in IE6 (fixes #11)
+* Made license comment important in build files (fixes #46)
+* Code cleanup (pull #70)
 
 June 18, 2011 - v0.2.0
 
